--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     database: postgresql
     generate-ddl: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
@@ -27,6 +27,7 @@ spring:
       enabled: true
       max-file-size: 1000MB
       max-request-size: 1000MB
+      location: D:\Workspace\java\Toomeet_play\server\temp
   mail:
     host: ${MAIL_HOST}
     port: ${MAIL_PORT}
@@ -81,15 +82,14 @@ spring:
           user_info_url: https://api.github.com/user
 
 server:
+  api_version: ${API_VERSION}
   port: ${SERVER_PORT:8080}
   servlet:
-    context-path: /api/v1/
+    context-path: /api/${API_VERSION}/
   error:
     path: /error
     whitelabel:
       enabled: true
-
-
 
 
 
@@ -114,6 +114,13 @@ jwt:
 
 cache:
   redis_url: ${REDIS_URL}
+
+
+cloudinary:
+  cloud_name: ${CLOUDINARY_NAME}
+  api_key: ${CLOUDINARY_API_KEY}
+  api_secret: ${CLOUDINARY_API_SECRET}
+  dir_prefix: ${CLOUDINARY_DIR_PREFIX}
 
 
 frontend:
